viewport is stretching on animation. fixed on desktop

--- a/App.scss
+++ b/App.scss
@@ -9,7 +9,7 @@ body {
    font-family: Boston, Arial, Helvetica, sans-serif;
    margin: 0;
    padding: 0;
-   // overflow-x: hidden;
+   overflow-x: hidden;
 
    h1 {
       font-size: 52px;
@@ -167,7 +167,7 @@ body {
    position: fixed;
    top: 0;
    width: 100%;
-   height: 100vh;
+   height: 100%;
    transition: background-color 1s linear, opacity 1s linear;
 }
 .background-blue {
@@ -185,7 +185,7 @@ body {
    opacity: 0;
    transition: opacity 500ms linear, background-image 500ms linear;
    width: 100%;
-   height: 100vh;
+   height: 100%;
    top: 0;
    mix-blend-mode: hard-light;
    background-image: url('./img/homepage/optimized/thematic-intro-bg.jpg');
@@ -211,24 +211,18 @@ body {
    height: 100vh;
    width: 100%;
    transition: opacity 500ms linear;
-   overflow: hidden;
 
    .hero-background {
       background-color: black;
       position: fixed;
-      height: 100vh;
+      height: 100%;
       width: 100%;
       transform: scale(1.3) rotate(5deg);
       opacity: 0;
       transition: transform 5s ease-out, opacity 1s linear;
-      overflow: hidden;
       background-image: url('./img/homepage/optimized/homepage-hero-bg.jpg');
       background-size: cover;
       background-position: center;
-      img {
-         width: 100%;
-         height: 100%;
-      }
    }
 
    .main-logo {
